# Hash-Based-Signatures

./: .gitignore  CMakeLists.txt  README.md  main.c  msg.txt
inc/: benchmark.h  choose.h  crypto.h  file.h  helper.h  lamport.h  lookuptable.h  mapping.h  merkle_tree.h  otp.h  signature.h  test.h  totp.h  types.h
inc/spn/: spn16.h  spn24.h  spn32.h  spn8.h
src/: Config.h  Helper.h  Types.h  benchmark.c  crypto.c  file.c  helper.c  lamport.c  mapping.c  merkle_tree.c  otp.c
src/lamport/: Lamport.h  lamport.c
src/lookup_table/: TableMng.h  tableMng.c
src/mapping/: Mapping.h  mapping.c
src/merkle_tree/: Merkle_tree.h  merkle_tree.c
src/otp/: otbBase.c  otp.c  totp.c
src/sbox/: Sbox.h  sbox.c
src/signature/: Signature.h  signature.c
src/spn/: Spn.h  spn.c  spn16.c  spn24.c  spn32.c  spn8.c
src/spn/tables/: 8bit.h
